deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subathon-timer
  namespace: default
  labels:
    app: subathon-timer
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: subathon-timer
  template:
    metadata:
      labels:
        app: subathon-timer
    spec:
      containers:
      - image: registry.davicoelho.com/subathon-timer/timer:51
        name: subathon-timer
        resources:
          limits:
            memory: "128Mi"
            cpu: "400m"
      imagePullSecrets:
      - name: registry-secret
